--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,13 +1,17 @@
 parser: babel-eslint
 
 env:
-        node: true
+  node: true
+  jest: true
 
 plugins:
-        - import
+  - import
+  - jest
+  - babel
 
 rules:
-        no-console: 0
+  no-console: 0
 
 extends:
-        - 'airbnb-base'
+  - 'airbnb-base'
+  - 'plugin:jest/recommended'
