--- a/__tests__/__fixtures__/recursion_files/after.ini
+++ b/__tests__/__fixtures__/recursion_files/after.ini
@@ -1,12 +1,17 @@
-; comments
 [common]
 follow=false
 setting1=Value 1
-setting3.key=value
 setting4=blah blah
-setting5.key5=value5
-setting6.key=value
-setting6.ops=vops
+
+[common.setting3]
+key=value
+
+[common.setting5]
+key5=value5
+
+[common.setting6]
+key=value
+ops=vops
 
 [group1]
 foo=bar
